--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
----
-layout: home
-# Index page
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://pran0xhub.netlify.app/" />
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="https://pran0xhub.netlify.app/">click here</a>.</p>
+  </body>
+</html>
